==> VentoTran/HUST_Design_Project_20212/REFERENCE/LCD/2.8inch_16BIT_Module_ILI9341_MRB2801_V1.0/1-Demo/Demo_STM32/Demo_Apollo_STM32F767IGT6_8&16_BIT_FSMC/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"

void LCD_GPIOInit(void)
{
		GPIO_InitTypeDef GPIO_Initure;
		FMC_NORSRAM_TimingTypeDef FSMC_ReadWriteTim;
		FMC_NORSRAM_TimingTypeDef FSMC_WriteTim;
		__HAL_RCC_GPIOB_CLK_ENABLE();			//开启GPIOB时钟
		GPIO_Initure.Pin=GPIO_PIN_5;            //PB5,背光控制
		GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
		GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
		GPIO_Initure.Speed=GPIO_SPEED_MEDIUM;     //高速
		HAL_GPIO_Init(GPIOB,&GPIO_Initure); 
		
		LCD_MPU_Config();                       						//使能MPU保护LCD区域
		SRAM_Handler.Instance=FMC_NORSRAM_DEVICE;       
		SRAM_Handler.Extended=FMC_NORSRAM_EXTENDED_DEVICE;       
		
		SRAM_Handler.Init.NSBank=FMC_NORSRAM_BANK1;     				//使用NE1
		SRAM_Handler.Init.DataAddressMux=FMC_DATA_ADDRESS_MUX_DISABLE; 	//不复用数据线
		SRAM_Handler.Init.MemoryType=FMC_MEMORY_TYPE_SRAM;   			//SRAM
		SRAM_Handler.Init.MemoryDataWidth=FMC_NORSRAM_MEM_BUS_WIDTH_16; //16位数据宽度
		SRAM_Handler.Init.WriteOperation=FMC_WRITE_OPERATION_ENABLE;    //存储器写使能
		SRAM_Handler.Init.ExtendedMode=FMC_EXTENDED_MODE_ENABLE;        //读写使用不同的时序
		
		//FSMC读时序控制寄存器
		FSMC_ReadWriteTim.AddressSetupTime=15;    	//地址建立时间(ADDSET)为15个HCLK 1/216M=4.6ns*15=69ns
		FSMC_ReadWriteTim.AddressHoldTime=0x00;
		FSMC_ReadWriteTim.DataSetupTime=80;       	//数据保存时间(DATAST)为85个HCLK	=4.6*80=368ns
		FSMC_ReadWriteTim.AccessMode=FMC_ACCESS_MODE_A; //模式A
		//FSMC写时序控制寄存器
		FSMC_WriteTim.AddressSetupTime=15;        	//地址建立时间(ADDSET)为15个HCLK=69ns
		FSMC_WriteTim.AddressHoldTime=0x00;
		FSMC_WriteTim.DataSetupTime=15;           	//数据保存时间(DATAST)为4.6ns*15个HCLK=69ns
		FSMC_WriteTim.AccessMode=FMC_ACCESS_MODE_A;	//模式A
		HAL_SRAM_Init(&SRAM_Handler,&FSMC_ReadWriteTim,&FSMC_WriteTim);	
		//重新配置写时序控制寄存器的时序使WR时序为最快   	 							    
		FMC_Bank1E->BWTR[0]&=~(0XF<<0);	//地址建立时间(ADDSET)清零 	 
		FMC_Bank1E->BWTR[0]&=~(0XF<<8);	//数据保存时间清零
		FMC_Bank1E->BWTR[0]|=4<<0;	 	//地址建立时间(ADDSET)为4.6ns*4个HCLK =18.4ns  	 
		FMC_Bank1E->BWTR[0]|=3<<8; 		//数据保存时间(DATAST)为4.6ns*3个HCLK=13.8ns
}
